Fix overlapping margin from about section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,6 @@ section {
     text-align: center;
     color: #f5f5f5;
     background: rgba(204, 175, 46, 0.3);
-    margin-bottom: -2em;
     position: relative;
     overflow: hidden;
     min-height: 80vh;
@@ -176,6 +175,24 @@ section {
     background: var(--primary-color);
     color: #f5f5f5;
     padding: 0;
+}
+
+.class-info h2 {
+    margin: 0;
+    font-weight: bold;
+    font-size: 3rem;
+    text-transform: uppercase;
+    letter-spacing: .2em;
+    text-align: center;
+    text-shadow:
+        0.05em 0 #444444,
+        0 0.05em #444444,
+        -0.05em 0 #444444,
+        0 -0.05em #444444,
+        -0.05em -0.05em #444444,
+        -0.05em 0.05em #444444,
+        0.05em -0.05em #444444,
+        0.05em 0.05em #444444;
 }
 
 .class-info li img {
